# cmake_example

./: .gitignore  CMakeLists.txt  main.cpp
hello-world/: CMakeLists.txt  hello_world.cpp  hello_world.hpp
hello-world/hello/: CMakeLists.txt  hello.cpp  hello.hpp
hello-world/world/: CMakeLists.txt  world.cpp  world.hpp
